Refactor project and upgrade to Gradle 7.3